# MyCGLab

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MyCGLabConfig.h.in  main.cpp
src/accelerators/: OcTree.cpp  OcTree.h
src/core/: CadCore.cpp  CadCore.h  CadInterface.cpp  CadInterface.h  FileIO.cpp  FileIO.h  GlobalInfo.cpp  GlobalInfo.h  ItemManager.cpp  Singleton.h  algorithms.cpp  algorithms.h  database.cpp  database.h  mcl.h  types.h  utilities.h
src/geometries/: GCubeBox.cpp  GCubeBox.h  GPlane.cpp  GPlane.h  GSphere.cpp  GSphere.h  GTriangleMesh.cpp  GTriangleMesh.h  Geometry.cpp  Geometry.h
src/materials/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  Dielectric.cpp  Dielectric.h  Disney.cpp  Disney.h  Lambertain.cpp  Lambertain.h  Mirror.cpp  Mirror.h
src/primitives/: PArrow.cpp  PArrow.h  PLines.cpp  PLines.h  POctree.cpp  POctree.h  PPoint.cpp  PPoint.h  PPolygon.cpp  PPolygon.h  PPolygonMesh.cpp  PPolygonMesh.h  PTriMesh.cpp  PTriMesh.h  Primitive.cpp  Primitive.h  Subdivide.cpp  Subdivide.h
src/raytrace/: Bsdf.cpp  Bsdf.h  Denoiser.cpp  Denoiser.h  Film.cpp  Film.h  Material.cpp  Material.h  RTCamera.cpp  RTCamera.h  RTLight.cpp  RTLight.h  RTPrimitive.cpp  RTPrimitive.h  RTScene.cpp  RTScene.h  Randomer.cpp  Randomer.h  RayTracer.cpp  RayTracer.h  Record.cpp  Record.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  ToneMapper.cpp  ToneMapper.h
src/realtime/: CubeShadowMapPaintVisitor.cpp  CubeShadowMapPaintVisitor.h  DefaultPaintVisitor.cpp  DefaultPaintVisitor.h  FrameBufferObject.cpp  FrameBufferObject.h  GLFrameBufferObject.cpp  GLFrameBufferObject.h  GLFunctions.cpp  GLFunctions.h  GLTexture.cpp  GLTexture.h  Light.cpp  Light.h  OrthoCamera.cpp  OrthoCamera.h  PaintInformation.cpp  PaintInformation.h  PaintVisitor.cpp  PaintVisitor.h  Painter.cpp  Painter.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PostProcPaintVisitor.cpp  PostProcPaintVisitor.h  Scene.cpp  Scene.h  ViewCamera.cpp  ViewCamera.h  axis.cpp  axis.h  camera.cpp  camera.h  shaders.cpp  shaders.h
src/softrender/: RasPolygon.cpp  RasPolygon.h  SoftRenderer.cpp  SoftRenderer.h  StratiZBufferOctreeRenderer.cpp  StratiZBufferOctreeRenderer.h  StratiZBufferRenderer.cpp  StratiZBufferRenderer.h
src/ui/: CadInterface.cpp  CadInterface.h  ColorInputWidget.ui  CommonScript.cpp  CommonScript.h  Console.cpp  Console.h  ItemManager.cpp  ItemManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MaterialSettingWidget.cpp  MaterialSettingWidget.h  MaterialSettingWidget.ui  ParameterInputWidget.cpp  ParameterInputWidget.h  PathInputWidget.ui  ProjectMagager.cpp  ProjectMagager.h  ScriptList.ui  Scripts.cpp  Scripts.h  SoftRenderWidget.cpp  SoftRenderWidget.h  SoftRenderWidget.ui  qconsole.cpp  qconsole.h  uiutilities.cpp  uiutilities.h
(+47 files in other folders)
